--- a/css/materialize.css
+++ b/css/materialize.css
@@ -17,17 +17,17 @@
        url(../fonts/material/MaterialIcons-Regular.ttf) format('truetype');
 }
 .material-icons {
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;  /* Preferred icon size */
-  display: inline-block;
-  line-height: 1;
-  text-transform: none;
-  letter-spacing: normal;
-  word-wrap: normal;
-  white-space: nowrap;
-  direction: ltr;
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px; /* Preferred icon size */
+    display: inline-block;
+    line-height: 1;
+    text-transform: none;
+    letter-spacing: normal;
+    word-wrap: normal;
+    white-space: nowrap;
+    direction: ltr;
 
   /* Support for all WebKit browsers. */
   -webkit-font-smoothing: antialiased;
@@ -40,6 +40,16 @@
   /* Support for IE. */
   font-feature-settings: 'liga';
 }
+
+@font-face {
+    font-family: 'BoiteABouff';
+    src: url(../fonts/boitebouf/Tevegraphy_Medium.ttf);
+}
+.boite-bouf {
+    font-family: 'BoiteABouff';
+    font-weight: 400;
+}
+
 .materialize-red {
   background-color: #e51c23 !important;
 }
