- creation de la bd - nouvelle table w_pages_content pour suivre le titre, description, et infos de chaques pages ca permet de retirer des fichiers redondants - debut de la connexion et des variables session et bientot cookie pour le panier d'achat - panneau admin menu retirer, le menu sera dans la premiere page

--- a/css/materialize.css
+++ b/css/materialize.css
@@ -4189,11 +4189,11 @@ nav .nav-wrapper {
   height: 100%;
 }
 
-@media only screen and (min-width: 993px) {
-  nav a.button-collapse {
-    display: none;
-  }
-}
+/*@media only screen and (min-width: 993px) {*/
+  /*nav a.button-collapse {*/
+    /*display: none;*/
+  /*}*/
+/*}*/
 
 nav .button-collapse {
   float: left;
