--- a/css/materialize.css
+++ b/css/materialize.css
@@ -72,6 +72,16 @@ label {
     /*}*/
 }
 
+.git{
+    width: 16px;
+    padding-left:18px;
+    height: 16px;
+    background-size: 16px;
+	background-image: url('ico/git.png');
+	background-repeat: no-repeat;
+	background-position: left;
+}
+
 @media ( max-width: 600px ) {
 
     .product-card {
@@ -4849,24 +4859,25 @@ small {
 
 @media only screen and (max-width: 600px) {
   #toast-container {
-    min-width: 100%;
-    bottom: 0%;
+
+      bottom: 0%;
+      max-width: 100%;
   }
 }
 
 @media only screen and (min-width: 601px) and (max-width: 992px) {
   #toast-container {
-    left: 5%;
-    bottom: 7%;
-    max-width: 90%;
+      min-width: 100%;
+      right: 0%;
+      top: 10%;
   }
 }
 
 @media only screen and (min-width: 993px) {
   #toast-container {
-    top: 10%;
-    right: 7%;
-    max-width: 86%;
+      min-width: 100%;
+      left: 0%;
+      top: 10%;
   }
 }
 
