template du menu fait avec ce qui sort de la bd reste a mettre un template de l'item en visuel dans la box

--- a/css/materialize.css
+++ b/css/materialize.css
@@ -5645,7 +5645,7 @@ button.btn-floating {
     box-shadow: none;
 }
 
-.collapsible-header {
+.collapsible-header, .menu-header {
   display: block;
   cursor: pointer;
   min-height: 3rem;
